--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -567,6 +567,8 @@
     <Compile Include="Reportes\Inventario\INV_001_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_002_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_002_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_003_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_004_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
