--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_005_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Info.cs" />
