--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_005_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Bus.cs" />
