--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -152,7 +152,10 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_003_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_003_cancelaciones_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_004_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Bus.cs" />
