--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -153,8 +153,11 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_003_cancelaciones_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_003_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_004_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Info.cs" />
