--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -442,6 +442,12 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Rpt.Designer.cs">
       <DependentUpon>CXP_002_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_003_cancelaciones_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_003_cancelaciones_Rpt.Designer.cs">
+      <DependentUpon>CXP_003_cancelaciones_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\CuentasPorPagar\CXP_003_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -453,6 +459,18 @@
     </Compile>
     <Compile Include="Reportes\CuentasPorPagar\CXP_004_Rpt.Designer.cs">
       <DependentUpon>CXP_004_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Rpt.Designer.cs">
+      <DependentUpon>CXP_005_cancelaciones_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_005_Rpt.Designer.cs">
+      <DependentUpon>CXP_005_Rpt.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\Inventario\INV_001_Rpt.cs">
       <SubType>Component</SubType>
@@ -8145,6 +8163,7 @@
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_004.cshtml" />
     <Content Include="Areas\Reportes\Views\CajaReportes\CAJ_002.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_007.cshtml" />
+    <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_005.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -8288,11 +8307,20 @@
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_002_Rpt.resx">
       <DependentUpon>CXP_002_Rpt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_003_cancelaciones_Rpt.resx">
+      <DependentUpon>CXP_003_cancelaciones_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_003_Rpt.resx">
       <DependentUpon>CXP_003_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_004_Rpt.resx">
       <DependentUpon>CXP_004_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Rpt.resx">
+      <DependentUpon>CXP_005_cancelaciones_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_005_Rpt.resx">
+      <DependentUpon>CXP_005_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Inventario\INV_001_Rpt.resx">
       <DependentUpon>INV_001_Rpt.cs</DependentUpon>
