--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_005_Bus.cs" />
+    <Compile Include="Reportes\Banco\BAN_001_Bus.cs" />
+    <Compile Include="Reportes\Banco\BAN_001_cancelaciones_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
@@ -156,6 +158,8 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_004_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_005_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_006_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_006_diario_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Bus.cs" />
