--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_005_Info.cs" />
+    <Compile Include="Reportes\Banco\BAN_001_cancelaciones_Info.cs" />
+    <Compile Include="Reportes\Banco\BAN_001_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
@@ -158,6 +160,8 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_004_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_005_cancelaciones_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_005_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_006_diario_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_006_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Info.cs" />
