--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -150,6 +150,8 @@
     <Compile Include="Reportes\Banco\BAN_001_cancelaciones_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_002_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_002_cancelaciones_Bus.cs" />
+    <Compile Include="Reportes\Banco\BAN_003_Bus.cs" />
+    <Compile Include="Reportes\Banco\BAN_004_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
