--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -152,6 +152,8 @@
     <Compile Include="Reportes\Banco\BAN_001_Info.cs" />
     <Compile Include="Reportes\Banco\BAN_002_cancelaciones_Info.cs" />
     <Compile Include="Reportes\Banco\BAN_002_Info.cs" />
+    <Compile Include="Reportes\Banco\BAN_003_Info.cs" />
+    <Compile Include="Reportes\Banco\BAN_004_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
