--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -432,6 +432,12 @@
     <Compile Include="Reportes\Banco\BAN_003_Rpt.Designer.cs">
       <DependentUpon>BAN_003_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Banco\BAN_004_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Banco\BAN_004_Rpt.Designer.cs">
+      <DependentUpon>BAN_004_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Caja\CAJ_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -8212,6 +8218,7 @@
     <Content Include="Areas\Reportes\Views\BancoReportes\BAN_001.cshtml" />
     <Content Include="Areas\Reportes\Views\BancoReportes\BAN_002.cshtml" />
     <Content Include="Areas\Reportes\Views\BancoReportes\BAN_003.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_004.cshtml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -8349,6 +8356,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_003_Rpt.resx">
       <DependentUpon>BAN_003_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_004_Rpt.resx">
+      <DependentUpon>BAN_004_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Caja\CAJ_001_Rpt.resx">
       <DependentUpon>CAJ_001_Rpt.cs</DependentUpon>
