--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -661,6 +661,8 @@
     <Compile Include="Reportes\RRHH\ROL_006_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_007_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_008_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_009_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_010_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -1116,6 +1118,12 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWROL_008.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWROL_009.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWROL_010.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="vwRo_ActaFiniquito.cs">
