--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -620,6 +620,12 @@
     <Compile Include="Reportes\RRHH\ROL_008_Rpt.Designer.cs">
       <DependentUpon>ROL_008_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\RRHH\ROL_009_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\RRHH\ROL_009_Rpt.Designer.cs">
+      <DependentUpon>ROL_009_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -8247,6 +8253,7 @@
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_005.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_006.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_007.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_009.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -8476,6 +8483,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_008_Rpt.resx">
       <DependentUpon>ROL_008_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\RRHH\ROL_009_Rpt.resx">
+      <DependentUpon>ROL_009_Rpt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
