--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -39,6 +39,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <sessionState timeout="20"></sessionState>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="DevExpress.Utils.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
