--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Areas\General\Controllers\CatalogoTipoController.cs" />
     <Compile Include="Areas\General\Controllers\CiudadController.cs" />
     <Compile Include="Areas\General\Controllers\EmpresaController.cs" />
+    <Compile Include="Areas\General\Controllers\ImagenesController.cs" />
     <Compile Include="Areas\General\Controllers\ImpuestoController.cs" />
     <Compile Include="Areas\General\Controllers\ModuloController.cs" />
     <Compile Include="Areas\General\Controllers\PaisController.cs" />
@@ -7047,6 +7048,7 @@
     <Content Include="bower_DevExpress\knockout\dist\knockout.debug.js" />
     <Content Include="bower_DevExpress\knockout\dist\knockout.js" />
     <Content Include="bower_DevExpress\knockout\Gruntfile.js" />
+    <Content Include="Content\bootstrap_imagenes.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -8247,6 +8249,7 @@
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_005.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_006.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_007.cshtml" />
+    <Content Include="Areas\General\Views\Imagenes\Imagenes.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -8324,6 +8327,7 @@
     <Folder Include="Areas\RRHH\Views\EmpleadoHistorialSueldo\" />
     <Folder Include="Areas\RRHH\Views\PeriodosPorNomina\" />
     <Folder Include="Areas\SeguridadAcceso\Models\" />
+    <Folder Include="Content\imagenes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
