--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -157,6 +157,18 @@
     <Compile Include="cp_codigo_SRI_x_CtaCble.cs">
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
+    <Compile Include="cp_conciliacion_Caja.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
+    <Compile Include="cp_conciliacion_Caja_det.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
+    <Compile Include="cp_conciliacion_Caja_det_Ing_Caja.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
+    <Compile Include="cp_conciliacion_Caja_det_x_ValeCaja.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
     <Compile Include="cp_cuotas_x_doc.cs">
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
