--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Caja\caj_Caja_Movimiento_Info.cs" />
     <Compile Include="Caja\caj_Caja_Movimiento_Tipo_Info.cs" />
     <Compile Include="Caja\caj_parametro_Info.cs" />
+    <Compile Include="Caja\cp_conciliacion_Caja_Info.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Info.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_det_Info.cs" />
