--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Caja\caj_Caja_Movimiento_det_Data.cs" />
     <Compile Include="Caja\caj_Caja_Movimiento_Tipo_Data.cs" />
     <Compile Include="Caja\caj_parametro_Data.cs" />
+    <Compile Include="Caja\cp_conciliacion_Caja_Data.cs" />
     <Compile Include="caj_Caja.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
