--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8675,6 +8675,9 @@
     <EmbeddedResource Include="Reportes\RRHH\ROL_009_Rpt.resx">
       <DependentUpon>ROL_009_Rpt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\RRHH\ROL_010_Rpt.resx">
+      <DependentUpon>ROL_010_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
